--- a/assets/templates/task.html
+++ b/assets/templates/task.html
@@ -9,14 +9,14 @@
         <h1>Create Task</h1>
         <form action="/tasks" method="POST" novalidate>
             <div>
-                {{range .Errors.name}}
+                {{range .Form.Errors.List "name"}}
                     <p style="color:crimson">{{.}}</p>
                 {{end}}
                 <p><label>Name</label></p>
-                <p><input type="name" name="name"></p>
+                <p><input type="name" name="name" value='{{.Form.Get "name"}}'></p>
             </div>
             <div>
-                {{range .Errors.Status}}
+                {{range .Form.Errors.List "status"}}
                     <p style="color:crimson">{{.}}</p>
                 {{end}}
                 <p><label>Status</label></p>
@@ -28,11 +28,12 @@
                 </select></p>
             </div>
             <div>
-                {{range .Errors.EndDate}}
+                {{range .Form.Errors.List "endDate"}}
                     <p style="color:crimson">{{.}}</p>
                 {{end}}
                 <p><label>End Date</label></p>
-                <p><input type="date" name="endDate" min="2024-10-1" max="2024-12-31"></p>
+                <p><input type="date" name="endDate" min="2024-10-1" max="2024-12-31"
+                    value='{{.Form.Get "endDate"}}'></p>
             </div>
             <div>
                 <input type="submit" value="Submit">
