--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -1,31 +1,24 @@
-<!DOCTYPE html>
-<html lang="en-GB">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Login</title>
-    </head>
-    <body>
-        <a href="/"><h3>Home</h3></a>
-        <h1>Login</h1>
-        <form action="/login" method="POST" novalidate>
-            <div>
-                {{range .Errors.email}}
-                    <p style="color:crimson">{{.}}</p>
-                {{end}}
-                <p><label>Email</label></p>
-                <p><input type="email" name="email"></p>
-            </div>
-            <div>
-                {{range .Errors.password}}
-                    <p style="color:crimson">{{.}}</p>
-                {{end}}
-                <p><label>Password</label></p>
-                <p><input type="password" name="password"></p>
-            </div>
-            <div>
-                <input type="submit" value="Submit">
-            </div>
-        </form>      
-    </body>
-</html>
+{{template "layout"}}
+{{define "title"}}Login{{end}}
+{{define "content"}}
+    <h1>Login</h1>
+    <form action="/login" method="POST" novalidate>
+        <div>
+            {{range .Errors.email}}
+                <p style="color:crimson">{{.}}</p>
+            {{end}}
+            <p><label>Email</label></p>
+            <p><input type="email" name="email"></p>
+        </div>
+        <div>
+            {{range .Errors.password}}
+                <p style="color:crimson">{{.}}</p>
+            {{end}}
+            <p><label>Password</label></p>
+            <p><input type="password" name="password"></p>
+        </div>
+        <div>
+            <input type="submit" value="Submit">
+        </div>
+    </form>      
+{{end}}
