Fixed bug on task update,continued to update html templates

--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -5,5 +5,8 @@
     {{range .Tasks}}
         <h2>{{.Name}}</h2>
     {{end}}
+    {{range .Employees}}
+        <h3>{{.Name}}</h3>
+    {{end}}
 {{end}}
 
