Relations page and post created

--- a/assets/templates/taem.html
+++ b/assets/templates/taem.html
@@ -1,21 +1,38 @@
 {{template "layout"}}
 {{define "title"}}Relations{{end}}
 {{define "content"}}
-<!--
-home := []homeRender{}
-	tmp := []models.Employees{}
-	for _, ts_em := range task_empl {
-		for _, task := range tasks {
-			if ts_em.Task_id == task.ID {
-				for _, employee := range empl {
-					if employee.ID == ts_em.Employee_id {
-						tmp = append(tmp, employee)
-					}
-				}
-			}
-			home = append(home, homeRender{task_id: task.ID, task_name: task.Name, employees: tmp})
-		}
-	}
-	log.Println(home)
--->
+<h1>Relations</h1>
+	<form action="/taem" method="POST" class="grid">
+		<div>
+			<fieldset>
+				<legend>Tasks</legend>
+				{{range .Tasks}}
+					<label>
+						<input type="radio" name="task" value="{{.ID}}">
+						{{.Name}}
+					</label>
+				{{end}}
+			</fieldset>
+			{{range .Form.Errors.List "task"}}
+				<small style="color:var(--pico-del-color)">{{.}}</small>
+			{{end}}
+		</div>
+		<div>
+			<fieldset>
+				<legend>Employees</legend>
+				{{range .Employees}}
+					<label>
+						<input type="radio" name="employee" value="{{.ID}}">
+						{{.Name}}
+					</label>
+				{{end}}
+			</fieldset>
+			{{range .Form.Errors.List "employee"}}
+				<small style="color:var(--pico-del-color)">{{.}}</small>
+			{{end}}
+		</div>
+		<div style="display:flex;align-items: center">
+			<input type="submit" value="Submit">
+		</div>
+	</form>
 {{end}}
