--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -2,6 +2,6 @@
 {{define "title"}}Home{{end}}
 {{define "content"}}
     <iconify-icon icon="ic:baseline-home" width="32px" height="32px"></iconify-icon>
-    <h2>{{.task_id}}</h2>
+    <h2>{{len .Render}}</h2>
 {{end}}
 
