Created update page for the relations

--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="/tasks">Tasks</a></li>
                 <li><a href="/employee">Employees</a></li>
+                <li><a href="/taem">Relations</a></li>
             </ul>
         </nav>
     </div>
