--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -27,7 +27,9 @@
         </div>
     </main>
     <footer>
-
+        <div class="container" style="display: flex;justify-content: center;">
+            <p>Brought to you by Programações Programming©</p>
+        </div>
     </footer>
 </body>
 </html>
