Added a page to view tasks and employees independently

--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -15,8 +15,10 @@
                 <li><a href="/">Home</a></li>
             </ul>
             <ul>
-                <li><a href="/tasks">Tasks</a></li>
+                <li><a href="/tasks">Create Task</a></li>
+                <li><a href="/listTasks">View Tasks</a></li>
                 <li><a href="/employee">Employees</a></li>
+                <li><a href="/listEmployees">View Employees</a></li>
                 <li><a href="/taem">Relations</a></li>
             </ul>
         </nav>
