--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -15,9 +15,9 @@
                 <li><a href="/">Home</a></li>
             </ul>
             <ul>
-                <li><a href="/tasks">Create Task</a></li>
+                <li><a href="/tasks">New Task</a></li>
                 <li><a href="/listTasks">View Tasks</a></li>
-                <li><a href="/employee">Employees</a></li>
+                <li><a href="/employee">New Employee</a></li>
                 <li><a href="/listEmployees">View Employees</a></li>
                 <li><a href="/taem">Relations</a></li>
             </ul>
